--- a/MtApi5Installer/Product.wxs
+++ b/MtApi5Installer/Product.wxs
@@ -1,70 +1,36 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-    <?define ProductName="MtApi5" ?>
+﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
+	<?define ProductName="MtApi5" ?>
+	<?define ProductPathNative="..\build\products\$(var.Configuration)\"?>
+	<?define PlatformSystemFolder = "System64Folder" ?>
+	<?define ProductVersion=!(bind.FileVersion.MtApi5.dll) ?>
+	<?define Manufacturer="DW"?>
+	<?define ProductPath="..\build\products\$(var.Configuration)\"?>
 
-    <?if $(var.Platform) = x64 ?>
-        <?define ProductPathNative="..\build\products\$(var.Configuration)\"?>
-        <?define PlatformProgramFilesFolder = "ProgramFiles64Folder" ?>
-        <?define PlatformSystemFolder = "System64Folder" ?>    
-    <?else ?>
-        <?define ProductPathNative="..\build\products\$(var.Configuration)\"?>
-        <?define PlatformProgramFilesFolder = "ProgramFilesFolder" ?>
-        <?define PlatformSystemFolder = "SystemFolder" ?>
-    <?endif ?>
+	<Package Name="$(var.ProductName) $(var.ProductVersion)" Language="1033" Version="$(var.ProductVersion)" Manufacturer="$(var.Manufacturer)" UpgradeCode="d72d346e-e6f7-4c23-85c6-1c42b3175599" InstallerVersion="200">
+		<WixVariable Id="WixUILicenseRtf" Value="..\LICENSE.rtf" />
+		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+		<MediaTemplate EmbedCab="yes" />
+		<Feature Id="MtApi5" Title="$(var.ProductName)" Level="1">
+			<ComponentGroupRef Id="MtApi5Components" />
+		</Feature>
+		<Feature Id="MT5Connector" Title="MT5 Connector" Level="1">
+			<ComponentGroupRef Id="MT5ConnectorComponents" />
+		</Feature>
+		<ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLFOLDER" />
+	</Package>
 
-    <?define ProductVersion=!(bind.FileVersion.MtApi5.dll) ?>
-    <?define Manufacturer="DW"?>
-    <?define ProductPath="..\build\products\$(var.Configuration)\"?>
-    
-  <Product Id="*" 
-            Name="$(var.ProductName) $(var.ProductVersion)" 
-            Language="1033" 
-            Version="$(var.ProductVersion)" 
-            Manufacturer="$(var.Manufacturer)" 
-            UpgradeCode="d72d346e-e6f7-4c23-85c6-1c42b3175599">
-    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
-    
-    <WixVariable Id="WixUILicenseRtf" Value="..\LICENSE.rtf" />
-
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-        <MediaTemplate EmbedCab="yes" />
-
-        <Feature Id="MtApi5" Title="$(var.ProductName)" Level="1">
-            <ComponentGroupRef Id="MtApi5Components"/>
-        </Feature>
-
-        <Feature Id="MT5Connector" Title="MT5 Connector" Level="1">
-            <ComponentGroupRef Id="MT5ConnectorComponents"/>
-        </Feature>
-
-        <Property Id="WIXUI_INSTALLDIR">INSTALLFOLDER</Property>
-        <UIRef Id="WixUI_Mondo" />
-  </Product>
-
-    <Fragment>
-        <Directory Id="TARGETDIR" Name="SourceDir">
-            <Directory Id="$(var.PlatformProgramFilesFolder)">
-                <Directory Id="INSTALLFOLDER" Name="$(var.ProductName)">
-
-                    <Directory Id="ExpertFolder" Name="Experts">
-                    </Directory>
-
-                    <Directory Id="GAC" Name="GAC">
-                    </Directory>
-
-                </Directory>
-            </Directory>
-
-            <Directory Id="$(var.PlatformSystemFolder)">
-            </Directory>
-
-            <Directory Id="ProgramMenuFolder">
-                <Directory Id="ApplicationProgramsFolder" Name="$(var.ProductName)">
-                </Directory>
-            </Directory>
-
-        </Directory>
-    </Fragment>
+	<Fragment>
+		<StandardDirectory Id="ProgramFiles64Folder">
+			<Directory Id="INSTALLFOLDER" Name="$(var.ProductName)">
+				<Directory Id="ExpertFolder" Name="Experts"/>
+				<Directory Id="GAC" Name="GAC"/>
+			</Directory>
+		</StandardDirectory>
+		<StandardDirectory Id="System64Folder"/>
+		<StandardDirectory Id="ProgramMenuFolder">
+			<Directory Id="ApplicationProgramsFolder" Name="$(var.ProductName)"/>
+		</StandardDirectory>
+	</Fragment>
 
     <Fragment>
         <ComponentGroup Id="MtApi5Components">
@@ -81,7 +47,7 @@
             </Component>
 
             <Component Id="MtApiServiceNetCoreDll" Directory="INSTALLFOLDER">
-                <File Id="GAC_MtApiServiceNetCore.dll" Name="MtApiServiceNetCore.dll" KeyPath="yes"
+                <File Id="MtApiServiceNetCore.dll" Name="MtApiServiceNetCore.dll" KeyPath="yes"
                     Source="$(var.ProductPath)MtApiServiceNetCore.dll"/>
             </Component>
 
@@ -113,7 +79,7 @@
                     Assembly=".net" AssemblyManifest="MTApiService.dll" Vital="yes" />
             </Component>
 
-            <Component Id="MT5ConnectorDll" Directory="$(var.PlatformSystemFolder)">
+            <Component Id="MT5ConnectorDll" Directory="$(var.PlatformSystemFolder)" Bitness="always64">
                 <File Id="MT5Connector5.dll" Name="MT5Connector.dll" KeyPath="yes"
                       Source="$(var.ProductPathNative)MT5Connector.dll" />
             </Component>
